@@ -227,4 +227,13 @@
         profile="seantis.reservation:default">
     </genericsetup:upgradeStep>
 
+    <genericsetup:upgradeStep
+        title="Add new settings"
+        description=""
+        source="1025"
+        destination="1026"
+        handler=".upgrades.upgrade_1025_to_1026"
+        profile="seantis.reservation:default">
+    </genericsetup:upgradeStep>
+
 </configure>
